# fvalues

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  release.sh  setup.cfg  tox.ini
.github/workflows/: tests.yml
fvalues/: __init__.py  f.py
tests/: test_f.py
