[metadata]
name = fvalues
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Keep track of components in strings, especially formatted values in f-strings.
url = https://github.com/oughtinc/fvalues
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
packages = fvalues
install_requires =
    executing

python_requires = >=3.9
setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3
include_package_data = True

[options.extras_require]
dev =
    autoflake
    black
    flake8
    mypy
    pre-commit
    pylint
    pytest
    tox

[options.package_data]
fvalues = py.typed

[coverage:run]
relative_files = True
